--- a/index.css
+++ b/index.css
@@ -7,6 +7,14 @@ p {
 	font-size: 1.6rem;
 }
 
+.content-area {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+
 nav {
 	padding: 1.5rem 0;
 	display: flex;
@@ -40,6 +48,7 @@ section#banner {
 	margin: 2rem 10rem;
 	display: flex;
 	justify-content: space-around;
+	align-items: center;
 }
 
 section#banner img {
@@ -68,8 +77,7 @@ section#banner div.info p.always-open {
 
 section#learn {
 	width: 100%;
-	margin: 0 5rem;
-	padding: 2rem 2rem;
+	padding: 1% 1%;
 	background-color: #DDB9A3;
 	text-align: center;
 }
@@ -89,10 +97,12 @@ section#plan img {
 
 footer {
 	background-color: #F9E7DC;
-	width: 100vw;
+	width: 100%;
 }
 
 footer img {
 	margin: 0;
 	width: 100%;
+	height: 45vh;
+	object-fit: cover;
 }
